commit translated contents

--- a/docs/visual-basic/misc/bc30018.md
+++ b/docs/visual-basic/misc/bc30018.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30018
 ms.assetid: 71851072-c0c7-4131-aaf7-f3e9e6a2a448
-ms.openlocfilehash: 18bdb3b0c73596fe5c1008f2e7b22fa9285fa0c1
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 2809d63b842f6e337e37230da25bfc031effca50
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64584224"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366749"
 ---
 # <a name="delegates-cannot-implement-interface-methods"></a>I delegati non possono implementare metodi di interfaccia
 Un delegato è un tipo riferimento che punta a una routine condivisa o a una routine di istanza su un oggetto. Dato che la routine a cui punta può essere modificata mediante assegnazione, l'istruzione `Delegate` non può supportare le clausole `Handles` o `Implements` .  
@@ -25,6 +25,6 @@ Un delegato è un tipo riferimento che punta a una routine condivisa o a una rou
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Delegate](../../visual-basic/language-reference/statements/delegate-statement.md)
-- [Handles](../../visual-basic/language-reference/statements/handles-clause.md)
-- [Istruzione Implements](../../visual-basic/language-reference/statements/implements-statement.md)
+- [Istruzione Delegate](../language-reference/statements/delegate-statement.md)
+- [Selettori](../language-reference/statements/handles-clause.md)
+- [Istruzione Implements](../language-reference/statements/implements-statement.md)
