--- a/docs/visual-basic/misc/bc30443.md
+++ b/docs/visual-basic/misc/bc30443.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30443
 ms.assetid: 6a68e7f7-3006-4c7f-ad53-d1fcfb105e10
-ms.openlocfilehash: ccd23c241ef0f1290842355cb1f6ed2610a09a1c
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 7735a1534961aa2327817ae8357f1ddf2c38fb88
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64589464"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84361658"
 ---
 # <a name="get-is-already-declared"></a>'Get' è già dichiarato
 Un'istruzione `Get` appare più volte in un blocco di codice. L'istruzione `Get` dichiara una routine della proprietà `Get` usata per recuperare un valore da una proprietà.  
@@ -25,4 +25,4 @@ Un'istruzione `Get` appare più volte in un blocco di codice. L'istruzione `Get`
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Get](../../visual-basic/language-reference/statements/get-statement.md)
+- [Istruzione Get](../language-reference/statements/get-statement.md)
