--- a/docs/visual-basic/misc/bc31131.md
+++ b/docs/visual-basic/misc/bc31131.md
@@ -1,5 +1,5 @@
 ---
-title: Definizione di 'RemoveHandler' mancante per l'evento '<eventname>'
+title: Manca la definizione di ' RemoveHandler ' per l'evento ' <eventname> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc31131
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC31131
 ms.assetid: 0ef68daf-b66e-4ecf-bf2c-dcacabd8aa3d
-ms.openlocfilehash: ed87c94d323f9320ab90da7e0a3897b806d3de70
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: e96bf448946139f03bf87692ada6f6082368889b
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61915542"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366047"
 ---
-# <a name="removehandler-definition-missing-for-event-eventname"></a>Definizione di 'RemoveHandler' mancante per l'evento '\<NomeEvento >'
+# <a name="removehandler-definition-missing-for-event-eventname"></a>Manca la definizione di ' RemoveHandler ' per l'evento ' \<eventname> '
 Se un evento viene dichiarato come `Custom`, deve fornire una routine per la rimozione di un gestore eventi.  
   
  **ID errore:** BC31131  
@@ -27,5 +27,5 @@ Se un evento viene dichiarato come `Custom`, deve fornire una routine per la rim
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione RemoveHandler](../../visual-basic/language-reference/statements/removehandler-statement.md)
-- [Istruzione Event](../../visual-basic/language-reference/statements/event-statement.md)
+- [Istruzione RemoveHandler](../language-reference/statements/removehandler-statement.md)
+- [Istruzione Event](../language-reference/statements/event-statement.md)
