--- a/docs/visual-basic/misc/bc32023.md
+++ b/docs/visual-basic/misc/bc32023.md
@@ -1,5 +1,5 @@
 ---
-title: Espressione è di tipo '<typename>', che non è un tipo di raccolta
+title: L'espressione è di tipo '<typename>', che non è un tipo raccolta
 ms.date: 07/20/2015
 f1_keywords:
 - bc32023
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC32023
 ms.assetid: d0f151be-6b65-498b-b571-03faf24df0d8
-ms.openlocfilehash: 284268f601b9c0083ca4bf73da02a1a29723a7d8
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: e5cfe32bb151740c9d47cd65afba6bbe0a9d68b1
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64603363"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84365787"
 ---
-# <a name="expression-is-of-type-typename-which-is-not-a-collection-type"></a>Espressione è di tipo '\<nomeTipo >', che non è un tipo di raccolta
-La variabile di gruppo specificata in un'istruzione `For Each` non è un oggetto raccolta o una matrice e il relativo tipo non implementa l'interfaccia <xref:System.Collections.IEnumerable> . Il tipo deve supportare il pattern di progettazione raccolta di Visual Basic o implementare <xref:System.Collections.IEnumerable>.  
+# <a name="expression-is-of-type-typename-which-is-not-a-collection-type"></a>L'espressione è di tipo '\<typename>', che non è un tipo raccolta
+La variabile di gruppo specificata in un'istruzione `For Each` non è un oggetto raccolta o una matrice e il relativo tipo non implementa l'interfaccia <xref:System.Collections.IEnumerable> . Il tipo deve supportare lo schema di progettazione della raccolta Visual Basic o implementare <xref:System.Collections.IEnumerable> .  
   
  **ID errore:** BC32023  
   
 ## <a name="to-correct-this-error"></a>Per correggere l'errore  
   
-- Dichiarare la variabile di gruppo sia di un tipo di classe che supporta la progettazione di raccolta di Visual Basic o implementa <xref:System.Collections.IEnumerable>.  
+- Dichiarare la variabile di gruppo in modo che sia di un tipo di classe che supporta la progettazione della raccolta Visual Basic o implementa <xref:System.Collections.IEnumerable> .  
   
 ## <a name="see-also"></a>Vedere anche
 
 - <xref:System.Collections.IEnumerable>
-- [Istruzione For Each...Next](../../visual-basic/language-reference/statements/for-each-next-statement.md)
-- [Classe Collection di Visual Basic](../../visual-basic/programming-guide/concepts/collections.md#visual-basic-collection-class)
+- [Istruzione For Each...Next](../language-reference/statements/for-each-next-statement.md)
+- [Classe Collection di Visual Basic](../programming-guide/concepts/collections.md#visual-basic-collection-class)
