--- a/docs/visual-basic/misc/bc32083.md
+++ b/docs/visual-basic/misc/bc32083.md
@@ -1,5 +1,5 @@
 ---
-title: Argomento di tipo '<typeargumentname>'deve avere un costruttore di istanza pubblico senza parametri per soddisfare il vincolo 'New' per il parametro di tipo'<typeparametername>'
+title: L'argomento di tipo ' <typeargumentname> ' deve avere un costruttore di istanza pubblico senza parametri per soddisfare il vincolo ' New ' per il parametro di tipo ' <typeparametername> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32083
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC32083
 ms.assetid: 56bf25f1-375c-4b5d-9969-45eba8b3b66c
-ms.openlocfilehash: dc7f865ac748faaf8b0d3b85c2888fdb70845dee
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 8e0adac9053771e7a9306cf436fe1b59e4eed075
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61943459"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84365397"
 ---
-# <a name="type-argument-typeargumentname-must-have-a-public-parameterless-instance-constructor-to-satisfy-the-new-constraint-for-type-parameter-typeparametername"></a>Argomento di tipo '\<nomeargomentotipo >' deve avere un costruttore di istanza pubblico senza parametri per soddisfare il vincolo 'New' per il parametro di tipo '\<nomeparametrotipo >'
-Un argomento di tipo fornisce un tipo senza un costruttore senza parametri accessibile a un parametro di tipo con il [operatore New](../../visual-basic/language-reference/operators/new-operator.md) vincolo.  
+# <a name="type-argument-typeargumentname-must-have-a-public-parameterless-instance-constructor-to-satisfy-the-new-constraint-for-type-parameter-typeparametername"></a>L'argomento di tipo ' \<typeargumentname> ' deve avere un costruttore di istanza pubblico senza parametri per soddisfare il vincolo ' New ' per il parametro di tipo ' \<typeparametername> '
+Un argomento di tipo fornisce un tipo senza un costruttore senza parametri accessibile a un parametro di tipo con il nuovo vincolo di [operatore](../language-reference/operators/new-operator.md) .  
   
  Un elenco di vincoli impone requisiti per l'argomento di tipo passato al parametro di tipo. Uno dei requisiti può essere che l'argomento di tipo deve esporre un costruttore senza parametri a cui il codice di creazione possa accedere. Per specificare questo requisito, l'elenco di vincoli comprende il vincolo `New` .  
   
@@ -29,6 +29,6 @@ Un argomento di tipo fornisce un tipo senza un costruttore senza parametri acces
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Elenco dei tipi](../../visual-basic/language-reference/statements/type-list.md)
-- [Procedura: Usare una classe generica](../../visual-basic/programming-guide/language-features/data-types/how-to-use-a-generic-class.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Type List](../language-reference/statements/type-list.md)
+- [Procedura: Usare una classe generica](../programming-guide/language-features/data-types/how-to-use-a-generic-class.md)
