--- a/docs/visual-basic/misc/bc32085.md
+++ b/docs/visual-basic/misc/bc32085.md
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC32085
 ms.assetid: a60bf62d-2b2e-4621-b8db-e67720b918fb
-ms.openlocfilehash: 8ff99430f4cff414e9155054fbfb140da2dae871
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 76b58e152edc773c51d337b362e091522face87a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64618667"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84365306"
 ---
 # <a name="arguments-cannot-be-passed-to-a-new-used-on-a-type-parameter"></a>Impossibile passare argomenti a un 'New' utilizzato in un parametro di tipo
-Una dichiarazione o istruzione di assegnazione invoca un tipo generico e fornisce gli argomenti del costruttore a un parametro di tipo con il [operatore New](../../visual-basic/language-reference/operators/new-operator.md) vincolo.  
+Una dichiarazione o un'istruzione di assegnazione richiama un tipo generico e fornisce gli argomenti del costruttore a un parametro di tipo con il vincolo [new operator](../language-reference/operators/new-operator.md) .  
   
  Un elenco di vincoli in un parametro di tipo può specificare che l'argomento di tipo passato al parametro di tipo deve esporre un costruttore senza parametri al quale il codice di creazione può accedere. Un parametro di tipo non può richiedere un costruttore che ha i parametri e un parametro di tipo con il vincolo `New` non può accettare tale costruttore.  
   
@@ -27,5 +27,5 @@ Una dichiarazione o istruzione di assegnazione invoca un tipo generico e fornisc
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Value Types and Reference Types](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Value Types and Reference Types](../programming-guide/language-features/data-types/value-types-and-reference-types.md)
