--- a/docs/visual-basic/misc/bc32101.md
+++ b/docs/visual-basic/misc/bc32101.md
@@ -7,17 +7,17 @@ f1_keywords:
 helpviewer_keywords:
 - BC32101
 ms.assetid: fac2330a-e397-4bd9-8166-934407575f9e
-ms.openlocfilehash: cc2404d0f5840d746335f76c8ecba77a30944104
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 9f98d048776f6a5cf8cb0251b77d487ac24026ff
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64618473"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84365293"
 ---
 # <a name="class-constraint-cannot-be-specified-multiple-times-for-the-same-type-parameter"></a>Non è possibile specificare il vincolo 'Class' più volte per lo stesso parametro di tipo
-Un elenco di vincoli include il vincolo [Class (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) più volte.  
+Un elenco di vincoli include il vincolo [Class (Visual Basic)](../language-reference/statements/class-statement.md) più volte.  
   
- Un elenco di vincoli in un parametro di tipo può specificare che l'argomento di tipo passato a tale parametro di tipo deve essere un tipo valore (con il vincolo [Structure (Visual Basic)](../../visual-basic/language-reference/statements/structure-statement.md) ) o un tipo riferimento (con il vincolo `Class` ). Non è possibile specificare entrambi i vincoli per lo stesso parametro di tipo e non è possibile specificare uno dei due vincoli più volte.  
+ Un elenco di vincoli in un parametro di tipo può specificare che l'argomento di tipo passato a tale parametro di tipo deve essere un tipo valore (con il vincolo [Structure (Visual Basic)](../language-reference/statements/structure-statement.md) ) o un tipo riferimento (con il vincolo `Class` ). Non è possibile specificare entrambi i vincoli per lo stesso parametro di tipo e non è possibile specificare uno dei due vincoli più volte.  
   
  ID errore: BC32101  
   
@@ -27,5 +27,5 @@ Un elenco di vincoli include il vincolo [Class (Visual Basic)](../../visual-basi
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Value Types and Reference Types](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Value Types and Reference Types](../programming-guide/language-features/data-types/value-types-and-reference-types.md)
