--- a/docs/visual-basic/misc/bc33101.md
+++ b/docs/visual-basic/misc/bc33101.md
@@ -1,5 +1,5 @@
 ---
-title: Tipo '<typeName>' deve essere un tipo valore o un argomento di tipo vincolato a 'Structure ' per poter essere usato con 'Nullable' o il modificatore nullable'?'
+title: Il tipo '<typeName>' deve essere un tipo valore o un argomento di tipo vincolato a 'Structure' per essere usato con 'Nullable' o il modificatore nullable '?'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc33101
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC33101
 ms.assetid: b3e0e4e4-87b8-4a38-a450-15233497acaa
-ms.openlocfilehash: 0622d5b63f5880e69a8c6c5c1b2415d1983af04c
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: 36f370f7b45d2bee3566db39b60826d96a461171
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64913391"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84361307"
 ---
-# <a name="type-typename-must-be-a-value-type-or-a-type-argument-constrained-to-structure-in-order-to-be-used-with-nullable-or-nullable-modifier-"></a>Tipo '\<nomeTipo >' deve essere un tipo valore o un argomento di tipo vincolato a 'Structure ' per poter essere usato con 'Nullable' o il modificatore nullable'?'
+# <a name="type-typename-must-be-a-value-type-or-a-type-argument-constrained-to-structure-in-order-to-be-used-with-nullable-or-nullable-modifier-"></a>Il tipo '\<typeName>' deve essere un tipo valore o un argomento di tipo vincolato a 'Structure' per essere usato con 'Nullable' o il modificatore nullable '?'
 Solo i tipi valore, incluse le strutture, possono essere dichiarati nullable.  
   
 ```vb  
@@ -37,4 +37,4 @@ Dim m As Integer?
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Tipi di valori nullable](../../visual-basic/programming-guide/language-features/data-types/nullable-value-types.md)
+- [Tipi di valore Nullable](../programming-guide/language-features/data-types/nullable-value-types.md)
