--- a/docs/visual-basic/misc/bc2020.md
+++ b/docs/visual-basic/misc/bc2020.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC2020
 ms.assetid: 08694da7-9864-4da6-9513-3d40b9ba046d
-ms.openlocfilehash: 4bfe314fa7b97c65db8cf4671db99408960da9bb
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: a757873722d987ca924964d597cb89c4e0cdb249
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64658492"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84367048"
 ---
 # <a name="the-maximum-number-of-errors-has-been-exceeded"></a>È stato superato il numero massimo di errori consentiti
 È stato raggiunto il limite massimo di 100 errori del compilatore.  
@@ -25,4 +25,4 @@ ms.locfileid: "64658492"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Tipi di errore](../../visual-basic/programming-guide/language-features/error-types.md)
+- [Tipi di errore](../programming-guide/language-features/error-types.md)
