--- a/docs/visual-basic/misc/bc30098.md
+++ b/docs/visual-basic/misc/bc30098.md
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30098
 ms.assetid: d0c6cdac-a49d-49d2-ba92-ddf01eed0620
-ms.openlocfilehash: 7039f5f129371877472b07c299bd7ad11508f77f
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: f433f80967dc58ad6139c26adf6f7af42c761c7c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64622153"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366307"
 ---
-# <a name="readonly-property-propertyname-cannot-be-the-target-of-an-assignment"></a>La proprietà 'ReadOnly' '\<NomeProprietà >' non può essere la destinazione di un'assegnazione
+# <a name="readonly-property-propertyname-cannot-be-the-target-of-an-assignment"></a>La proprietà 'ReadOnly' '\<propertyname>' non può essere la destinazione di un'assegnazione
 Una proprietà `ReadOnly` si trova in un contesto che le assegna un valore. Solo alle variabili, alle proprietà e agli elementi di matrice scrivibili è possibile assegnare valori durante l'esecuzione.  
   
  **ID errore:** BC30098  
@@ -25,5 +25,5 @@ Una proprietà `ReadOnly` si trova in un contesto che le assegna un valore. Solo
   
 ## <a name="see-also"></a>Vedere anche
 
-- [ReadOnly](../../visual-basic/language-reference/modifiers/readonly.md)
-- [Istruzione Property](../../visual-basic/language-reference/statements/property-statement.md)
+- [ReadOnly](../language-reference/modifiers/readonly.md)
+- [Property Statement](../language-reference/statements/property-statement.md)
