--- a/docs/visual-basic/misc/bc31049.md
+++ b/docs/visual-basic/misc/bc31049.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31049
 ms.assetid: 8356978e-7f84-4932-be0f-dda005c9f8ca
-ms.openlocfilehash: 3a2b897776cb0ebc27611be6a1e2c1704a053c9d
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: 683686a1407680102ee94562bf4fdd3bc4999e5e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71351596"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366138"
 ---
 # <a name="initializers-on-structure-members-are-valid-only-for-shared-members-and-constants"></a>Gli inizializzatori dei membri di struttura sono validi solo per costanti e membri 'Shared'
 Una variabile membro di struttura è stata inizializzata come parte della relativa dichiarazione.  
@@ -23,7 +23,7 @@ Una variabile membro di struttura è stata inizializzata come parte della relati
   
 - Usare una costante anziché una variabile.  
   
-- Aggiungere un costruttore con parametri alla struttura. Esempio:  
+- Aggiungere un costruttore con parametri alla struttura. Ad esempio:  
   
     ```vb  
     Structure TestStruct  
@@ -36,5 +36,5 @@ Una variabile membro di struttura è stata inizializzata come parte della relati
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Procedura: Dichiarare una struttura](../../visual-basic/programming-guide/language-features/data-types/how-to-declare-a-structure.md)
-- [Costanti ed enumerazioni](../../visual-basic/programming-guide/language-features/constants-enums/index.md)
+- [Procedura: Dichiarare una struttura](../programming-guide/language-features/data-types/how-to-declare-a-structure.md)
+- [Costanti ed enumerazioni](../programming-guide/language-features/constants-enums/index.md)
