--- a/docs/visual-basic/misc/bc31502.md
+++ b/docs/visual-basic/misc/bc31502.md
@@ -1,5 +1,5 @@
 ---
-title: Il nome di risorsa ' <resourcename>' non può essere usato più di una volta
+title: Il nome di risorsa '<resourcename>' non può essere usato più di una volta
 ms.date: 07/20/2015
 f1_keywords:
 - bc31502
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC31502
 ms.assetid: 1f49b1a0-be7e-4fbe-9af5-1bf627d77e4b
-ms.openlocfilehash: 4b107f9fa6690cda2a88b55b272ab0aa24ba814a
-ms.sourcegitcommit: 559259da2738a7b33a46c0130e51d336091c2097
+ms.openlocfilehash: 706f19b8d336195b664bab03e81e0862649ea528
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 10/22/2019
-ms.locfileid: "72769927"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366034"
 ---
-# <a name="resource-name-resourcename-cannot-be-used-more-than-once"></a>Il nome di risorsa ' \<resourcename >' non può essere usato più di una volta
+# <a name="resource-name-resourcename-cannot-be-used-more-than-once"></a>Il nome di risorsa '\<resourcename>' non può essere usato più di una volta
 Il nome di una risorsa specificata in un file libreria a collegamento dinamico (DLL) o in un file eseguibile è stato usato più di una volta.  
   
  **ID errore:** BC31502  
@@ -25,5 +25,5 @@ Il nome di una risorsa specificata in un file libreria a collegamento dinamico (
   
 ## <a name="see-also"></a>Vedere anche
 
-- [-linkresource ((Visual Basic)](../../visual-basic/reference/command-line-compiler/linkresource.md)
-- [-Resource (Visual Basic)](../../visual-basic/reference/command-line-compiler/resource.md)
+- [-linkresource ((Visual Basic)](../reference/command-line-compiler/linkresource.md)
+- [-Resource (Visual Basic)](../reference/command-line-compiler/resource.md)
