--- a/docs/visual-basic/misc/bc33104.md
+++ b/docs/visual-basic/misc/bc33104.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC33104
 ms.assetid: 3218f89b-cdcf-4e61-9a40-475a5d7e469d
-ms.openlocfilehash: 399747368576680e87c308d1f03aaaff12776ce5
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: d15f357a0ca081020540af18f42dde0efdbfb64c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64626569"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84361242"
 ---
 # <a name="if-operator-requires-either-two-or-three-operands"></a>L'operatore 'If' richiede due o tre operandi
 L'operatore `If` accetta solo due o tre argomenti.  
@@ -27,5 +27,5 @@ L'operatore `If` accetta solo due o tre argomenti.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Operatore If](../../visual-basic/language-reference/operators/if-operator.md)
-- [Istruzione If...Then...Else](../../visual-basic/language-reference/statements/if-then-else-statement.md)
+- [Operatore If](../language-reference/operators/if-operator.md)
+- [Istruzione If...Then...Else](../language-reference/statements/if-then-else-statement.md)
