commit bilingual contents

--- a/docs/visual-basic/misc/bc30018.md
+++ b/docs/visual-basic/misc/bc30018.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30018
 ms.assetid: 71851072-c0c7-4131-aaf7-f3e9e6a2a448
-ms.openlocfilehash: 18bdb3b0c73596fe5c1008f2e7b22fa9285fa0c1
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 2809d63b842f6e337e37230da25bfc031effca50
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64584224"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366749"
 ---
-# <a name="delegates-cannot-implement-interface-methods"></a><span data-ttu-id="e042e-102">I delegati non possono implementare metodi di interfaccia</span><span class="sxs-lookup"><span data-stu-id="e042e-102">Delegates cannot implement interface methods</span></span>
-<span data-ttu-id="e042e-103">Un delegato è un tipo riferimento che punta a una routine condivisa o a una routine di istanza su un oggetto.</span><span class="sxs-lookup"><span data-stu-id="e042e-103">A delegate is a reference type that points to a shared procedure or to an instance procedure on an object.</span></span> <span data-ttu-id="e042e-104">Dato che la routine a cui punta può essere modificata mediante assegnazione, l'istruzione `Delegate` non può supportare le clausole `Handles` o `Implements` .</span><span class="sxs-lookup"><span data-stu-id="e042e-104">Because the procedure it points to can be changed by assignment, the `Delegate` statement cannot support the `Handles` or `Implements` clauses.</span></span>  
+# <a name="delegates-cannot-implement-interface-methods"></a><span data-ttu-id="2ff05-102">I delegati non possono implementare metodi di interfaccia</span><span class="sxs-lookup"><span data-stu-id="2ff05-102">Delegates cannot implement interface methods</span></span>
+<span data-ttu-id="2ff05-103">Un delegato è un tipo riferimento che punta a una routine condivisa o a una routine di istanza su un oggetto.</span><span class="sxs-lookup"><span data-stu-id="2ff05-103">A delegate is a reference type that points to a shared procedure or to an instance procedure on an object.</span></span> <span data-ttu-id="2ff05-104">Dato che la routine a cui punta può essere modificata mediante assegnazione, l'istruzione `Delegate` non può supportare le clausole `Handles` o `Implements` .</span><span class="sxs-lookup"><span data-stu-id="2ff05-104">Because the procedure it points to can be changed by assignment, the `Delegate` statement cannot support the `Handles` or `Implements` clauses.</span></span>  
   
- <span data-ttu-id="e042e-105">**ID errore:** BC30018</span><span class="sxs-lookup"><span data-stu-id="e042e-105">**Error ID:** BC30018</span></span>  
+ <span data-ttu-id="2ff05-105">**ID errore:** BC30018</span><span class="sxs-lookup"><span data-stu-id="2ff05-105">**Error ID:** BC30018</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="e042e-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e042e-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="2ff05-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2ff05-106">To correct this error</span></span>  
   
-- <span data-ttu-id="e042e-107">Rimuovere la clausola `Implements` dall'istruzione `Delegate` .</span><span class="sxs-lookup"><span data-stu-id="e042e-107">Remove the `Implements` clause from the `Delegate` statement.</span></span>  
+- <span data-ttu-id="2ff05-107">Rimuovere la clausola `Implements` dall'istruzione `Delegate` .</span><span class="sxs-lookup"><span data-stu-id="2ff05-107">Remove the `Implements` clause from the `Delegate` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="e042e-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e042e-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="2ff05-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2ff05-108">See also</span></span>
 
-- [<span data-ttu-id="e042e-109">Istruzione Delegate</span><span class="sxs-lookup"><span data-stu-id="e042e-109">Delegate Statement</span></span>](../../visual-basic/language-reference/statements/delegate-statement.md)
-- [<span data-ttu-id="e042e-110">Handles</span><span class="sxs-lookup"><span data-stu-id="e042e-110">Handles</span></span>](../../visual-basic/language-reference/statements/handles-clause.md)
-- [<span data-ttu-id="e042e-111">Istruzione Implements</span><span class="sxs-lookup"><span data-stu-id="e042e-111">Implements Statement</span></span>](../../visual-basic/language-reference/statements/implements-statement.md)
+- [<span data-ttu-id="2ff05-109">Istruzione Delegate</span><span class="sxs-lookup"><span data-stu-id="2ff05-109">Delegate Statement</span></span>](../language-reference/statements/delegate-statement.md)
+- [<span data-ttu-id="2ff05-110">Selettori</span><span class="sxs-lookup"><span data-stu-id="2ff05-110">Handles</span></span>](../language-reference/statements/handles-clause.md)
+- [<span data-ttu-id="2ff05-111">Istruzione Implements</span><span class="sxs-lookup"><span data-stu-id="2ff05-111">Implements Statement</span></span>](../language-reference/statements/implements-statement.md)
