--- a/docs/visual-basic/misc/bc31502.md
+++ b/docs/visual-basic/misc/bc31502.md
@@ -1,5 +1,5 @@
 ---
-title: Il nome di risorsa ' <resourcename>' non può essere usato più di una volta
+title: Il nome di risorsa '<resourcename>' non può essere usato più di una volta
 ms.date: 07/20/2015
 f1_keywords:
 - bc31502
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC31502
 ms.assetid: 1f49b1a0-be7e-4fbe-9af5-1bf627d77e4b
-ms.openlocfilehash: 4b107f9fa6690cda2a88b55b272ab0aa24ba814a
-ms.sourcegitcommit: 559259da2738a7b33a46c0130e51d336091c2097
+ms.openlocfilehash: 706f19b8d336195b664bab03e81e0862649ea528
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 10/22/2019
-ms.locfileid: "72769927"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366034"
 ---
-# <a name="resource-name-resourcename-cannot-be-used-more-than-once"></a><span data-ttu-id="5918a-102">Il nome di risorsa ' \<resourcename >' non può essere usato più di una volta</span><span class="sxs-lookup"><span data-stu-id="5918a-102">Resource name '\<resourcename>' cannot be used more than once</span></span>
-<span data-ttu-id="5918a-103">Il nome di una risorsa specificata in un file libreria a collegamento dinamico (DLL) o in un file eseguibile è stato usato più di una volta.</span><span class="sxs-lookup"><span data-stu-id="5918a-103">The name for a specified resource in a dynamic-linked library or executable file was used more than once.</span></span>  
+# <a name="resource-name-resourcename-cannot-be-used-more-than-once"></a><span data-ttu-id="cc497-102">Il nome di risorsa '\<resourcename>' non può essere usato più di una volta</span><span class="sxs-lookup"><span data-stu-id="cc497-102">Resource name '\<resourcename>' cannot be used more than once</span></span>
+<span data-ttu-id="cc497-103">Il nome di una risorsa specificata in un file libreria a collegamento dinamico (DLL) o in un file eseguibile è stato usato più di una volta.</span><span class="sxs-lookup"><span data-stu-id="cc497-103">The name for a specified resource in a dynamic-linked library or executable file was used more than once.</span></span>  
   
- <span data-ttu-id="5918a-104">**ID errore:** BC31502</span><span class="sxs-lookup"><span data-stu-id="5918a-104">**Error ID:** BC31502</span></span>  
+ <span data-ttu-id="cc497-104">**ID errore:** BC31502</span><span class="sxs-lookup"><span data-stu-id="cc497-104">**Error ID:** BC31502</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="5918a-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="5918a-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="cc497-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="cc497-105">To correct this error</span></span>  
   
-- <span data-ttu-id="5918a-106">Assegnare un nome univoco alle risorse.</span><span class="sxs-lookup"><span data-stu-id="5918a-106">Uniquely name resources.</span></span>  
+- <span data-ttu-id="cc497-106">Assegnare un nome univoco alle risorse.</span><span class="sxs-lookup"><span data-stu-id="cc497-106">Uniquely name resources.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="5918a-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="5918a-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="cc497-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="cc497-107">See also</span></span>
 
-- [<span data-ttu-id="5918a-108">-linkresource ((Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="5918a-108">-linkresource (Visual Basic)</span></span>](../../visual-basic/reference/command-line-compiler/linkresource.md)
-- [<span data-ttu-id="5918a-109">-Resource (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="5918a-109">-resource (Visual Basic)</span></span>](../../visual-basic/reference/command-line-compiler/resource.md)
+- [<span data-ttu-id="cc497-108">-linkresource ((Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="cc497-108">-linkresource (Visual Basic)</span></span>](../reference/command-line-compiler/linkresource.md)
+- [<span data-ttu-id="cc497-109">-Resource (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="cc497-109">-resource (Visual Basic)</span></span>](../reference/command-line-compiler/resource.md)
