--- a/docs/visual-basic/misc/bc32085.md
+++ b/docs/visual-basic/misc/bc32085.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC32085
 ms.assetid: a60bf62d-2b2e-4621-b8db-e67720b918fb
-ms.openlocfilehash: 8ff99430f4cff414e9155054fbfb140da2dae871
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 76b58e152edc773c51d337b362e091522face87a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64618667"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84365306"
 ---
-# <a name="arguments-cannot-be-passed-to-a-new-used-on-a-type-parameter"></a><span data-ttu-id="12293-102">Impossibile passare argomenti a un 'New' utilizzato in un parametro di tipo</span><span class="sxs-lookup"><span data-stu-id="12293-102">Arguments cannot be passed to a 'New' used on a type parameter</span></span>
-<span data-ttu-id="12293-103">Una dichiarazione o istruzione di assegnazione invoca un tipo generico e fornisce gli argomenti del costruttore a un parametro di tipo con il [operatore New](../../visual-basic/language-reference/operators/new-operator.md) vincolo.</span><span class="sxs-lookup"><span data-stu-id="12293-103">A declaration or assignment statement invokes a generic type and supplies constructor arguments to a type parameter that has the [New Operator](../../visual-basic/language-reference/operators/new-operator.md) constraint.</span></span>  
+# <a name="arguments-cannot-be-passed-to-a-new-used-on-a-type-parameter"></a><span data-ttu-id="41355-102">Impossibile passare argomenti a un 'New' utilizzato in un parametro di tipo</span><span class="sxs-lookup"><span data-stu-id="41355-102">Arguments cannot be passed to a 'New' used on a type parameter</span></span>
+<span data-ttu-id="41355-103">Una dichiarazione o un'istruzione di assegnazione richiama un tipo generico e fornisce gli argomenti del costruttore a un parametro di tipo con il vincolo [new operator](../language-reference/operators/new-operator.md) .</span><span class="sxs-lookup"><span data-stu-id="41355-103">A declaration or assignment statement invokes a generic type and supplies constructor arguments to a type parameter that has the [New Operator](../language-reference/operators/new-operator.md) constraint.</span></span>  
   
- <span data-ttu-id="12293-104">Un elenco di vincoli in un parametro di tipo può specificare che l'argomento di tipo passato al parametro di tipo deve esporre un costruttore senza parametri al quale il codice di creazione può accedere.</span><span class="sxs-lookup"><span data-stu-id="12293-104">A constraint list on a type parameter can specify that the type argument passed to that type parameter must expose a parameterless constructor that the creating code can access.</span></span> <span data-ttu-id="12293-105">Un parametro di tipo non può richiedere un costruttore che ha i parametri e un parametro di tipo con il vincolo `New` non può accettare tale costruttore.</span><span class="sxs-lookup"><span data-stu-id="12293-105">A type parameter cannot require a constructor that takes parameters, and a type parameter with the `New` constraint cannot accept such a constructor.</span></span>  
+ <span data-ttu-id="41355-104">Un elenco di vincoli in un parametro di tipo può specificare che l'argomento di tipo passato al parametro di tipo deve esporre un costruttore senza parametri al quale il codice di creazione può accedere.</span><span class="sxs-lookup"><span data-stu-id="41355-104">A constraint list on a type parameter can specify that the type argument passed to that type parameter must expose a parameterless constructor that the creating code can access.</span></span> <span data-ttu-id="41355-105">Un parametro di tipo non può richiedere un costruttore che ha i parametri e un parametro di tipo con il vincolo `New` non può accettare tale costruttore.</span><span class="sxs-lookup"><span data-stu-id="41355-105">A type parameter cannot require a constructor that takes parameters, and a type parameter with the `New` constraint cannot accept such a constructor.</span></span>  
   
- <span data-ttu-id="12293-106">**ID errore:** BC32085</span><span class="sxs-lookup"><span data-stu-id="12293-106">**Error ID:** BC32085</span></span>  
+ <span data-ttu-id="41355-106">**ID errore:** BC32085</span><span class="sxs-lookup"><span data-stu-id="41355-106">**Error ID:** BC32085</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="12293-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="12293-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="41355-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="41355-107">To correct this error</span></span>  
   
-- <span data-ttu-id="12293-108">Rimuovere l'elenco degli argomenti che segue l'argomento di tipo nell'istruzione che invoca il tipo generico.</span><span class="sxs-lookup"><span data-stu-id="12293-108">Remove the argument list following the type argument in the statement invoking the generic type.</span></span> <span data-ttu-id="12293-109">Non è possibile passare gli argomenti del costruttore al parametro di tipo corrispondente.</span><span class="sxs-lookup"><span data-stu-id="12293-109">You cannot pass constructor arguments to the corresponding type parameter.</span></span>  
+- <span data-ttu-id="41355-108">Rimuovere l'elenco degli argomenti che segue l'argomento di tipo nell'istruzione che invoca il tipo generico.</span><span class="sxs-lookup"><span data-stu-id="41355-108">Remove the argument list following the type argument in the statement invoking the generic type.</span></span> <span data-ttu-id="41355-109">Non è possibile passare gli argomenti del costruttore al parametro di tipo corrispondente.</span><span class="sxs-lookup"><span data-stu-id="41355-109">You cannot pass constructor arguments to the corresponding type parameter.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="12293-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="12293-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="41355-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="41355-110">See also</span></span>
 
-- [<span data-ttu-id="12293-111">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="12293-111">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="12293-112">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="12293-112">Value Types and Reference Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
+- [<span data-ttu-id="41355-111">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="41355-111">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="41355-112">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="41355-112">Value Types and Reference Types</span></span>](../programming-guide/language-features/data-types/value-types-and-reference-types.md)
