--- a/docs/visual-basic/misc/bc2020.md
+++ b/docs/visual-basic/misc/bc2020.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC2020
 ms.assetid: 08694da7-9864-4da6-9513-3d40b9ba046d
-ms.openlocfilehash: 4bfe314fa7b97c65db8cf4671db99408960da9bb
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: a757873722d987ca924964d597cb89c4e0cdb249
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64658492"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84367048"
 ---
-# <a name="the-maximum-number-of-errors-has-been-exceeded"></a><span data-ttu-id="ec779-102">È stato superato il numero massimo di errori consentiti</span><span class="sxs-lookup"><span data-stu-id="ec779-102">The maximum number of errors has been exceeded</span></span>
-<span data-ttu-id="ec779-103">È stato raggiunto il limite massimo di 100 errori del compilatore.</span><span class="sxs-lookup"><span data-stu-id="ec779-103">The compiler maximum of 100 errors has been reached.</span></span>  
+# <a name="the-maximum-number-of-errors-has-been-exceeded"></a><span data-ttu-id="dc7d9-102">È stato superato il numero massimo di errori consentiti</span><span class="sxs-lookup"><span data-stu-id="dc7d9-102">The maximum number of errors has been exceeded</span></span>
+<span data-ttu-id="dc7d9-103">È stato raggiunto il limite massimo di 100 errori del compilatore.</span><span class="sxs-lookup"><span data-stu-id="dc7d9-103">The compiler maximum of 100 errors has been reached.</span></span>  
   
- <span data-ttu-id="ec779-104">**ID errore:** BC2020</span><span class="sxs-lookup"><span data-stu-id="ec779-104">**Error ID:** BC2020</span></span>  
+ <span data-ttu-id="dc7d9-104">**ID errore:** BC2020</span><span class="sxs-lookup"><span data-stu-id="dc7d9-104">**Error ID:** BC2020</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="ec779-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ec779-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="dc7d9-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="dc7d9-105">To correct this error</span></span>  
   
-- <span data-ttu-id="ec779-106">Ridurre il numero di errori generati eseguendo il debug e risolvendoli uno alla volta.</span><span class="sxs-lookup"><span data-stu-id="ec779-106">Decrease the number of generated errors by debugging and addressing each in turn.</span></span>  
+- <span data-ttu-id="dc7d9-106">Ridurre il numero di errori generati eseguendo il debug e risolvendoli uno alla volta.</span><span class="sxs-lookup"><span data-stu-id="dc7d9-106">Decrease the number of generated errors by debugging and addressing each in turn.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="ec779-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ec779-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="dc7d9-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="dc7d9-107">See also</span></span>
 
-- [<span data-ttu-id="ec779-108">Tipi di errore</span><span class="sxs-lookup"><span data-stu-id="ec779-108">Error Types</span></span>](../../visual-basic/programming-guide/language-features/error-types.md)
+- [<span data-ttu-id="dc7d9-108">Tipi di errore</span><span class="sxs-lookup"><span data-stu-id="dc7d9-108">Error Types</span></span>](../programming-guide/language-features/error-types.md)
