--- a/docs/visual-basic/misc/bc30082.md
+++ b/docs/visual-basic/misc/bc30082.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30082
 ms.assetid: 50b722b1-906f-4cb1-b5d4-fefab2ba3907
-ms.openlocfilehash: 42c1cc78aaeb37c5d213df002e01f2f862f50600
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 1d28ea0f0070a97ca172dce953b24a5879de2d69
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61935967"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84380681"
 ---
-# <a name="while-must-end-with-a-matching-end-while"></a><span data-ttu-id="b52e4-102">'While' deve terminare con un oggetto 'End While' corrispondente</span><span class="sxs-lookup"><span data-stu-id="b52e4-102">'While' must end with a matching 'End While'</span></span>
-<span data-ttu-id="b52e4-103">Un'istruzione `While` si verifica senza un'istruzione `End While` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="b52e4-103">A `While` statement occurs without a corresponding `End While` statement.</span></span> <span data-ttu-id="b52e4-104">Deve essere usata un'istruzione `End While` per terminare il blocco `While` .</span><span class="sxs-lookup"><span data-stu-id="b52e4-104">An `End While` statement must be used to end the `While` block.</span></span>  
+# <a name="while-must-end-with-a-matching-end-while"></a><span data-ttu-id="b3a42-102">'While' deve terminare con un oggetto 'End While' corrispondente</span><span class="sxs-lookup"><span data-stu-id="b3a42-102">'While' must end with a matching 'End While'</span></span>
+<span data-ttu-id="b3a42-103">Un'istruzione `While` si verifica senza un'istruzione `End While` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="b3a42-103">A `While` statement occurs without a corresponding `End While` statement.</span></span> <span data-ttu-id="b3a42-104">Deve essere usata un'istruzione `End While` per terminare il blocco `While` .</span><span class="sxs-lookup"><span data-stu-id="b3a42-104">An `End While` statement must be used to end the `While` block.</span></span>  
   
- <span data-ttu-id="b52e4-105">**ID errore:** BC30082</span><span class="sxs-lookup"><span data-stu-id="b52e4-105">**Error ID:** BC30082</span></span>  
+ <span data-ttu-id="b3a42-105">**ID errore:** BC30082</span><span class="sxs-lookup"><span data-stu-id="b3a42-105">**Error ID:** BC30082</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="b52e4-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b52e4-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b3a42-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b3a42-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="b52e4-107">Se questo blocco `While` fa parte di un set di blocchi `While` annidati, verificare che ogni blocco venga terminato correttamente.</span><span class="sxs-lookup"><span data-stu-id="b52e4-107">If this `While` block is part of a set of nested `While` blocks, make sure each block is properly terminated.</span></span>  
+1. <span data-ttu-id="b3a42-107">Se questo blocco `While` fa parte di un set di blocchi `While` annidati, verificare che ogni blocco venga terminato correttamente.</span><span class="sxs-lookup"><span data-stu-id="b3a42-107">If this `While` block is part of a set of nested `While` blocks, make sure each block is properly terminated.</span></span>  
   
-2. <span data-ttu-id="b52e4-108">Aggiungere un'istruzione `End While` alla fine del blocco `While` .</span><span class="sxs-lookup"><span data-stu-id="b52e4-108">Add an `End While` statement to the end of the `While` block.</span></span>  
+2. <span data-ttu-id="b3a42-108">Aggiungere un'istruzione `End While` alla fine del blocco `While` .</span><span class="sxs-lookup"><span data-stu-id="b3a42-108">Add an `End While` statement to the end of the `While` block.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="b52e4-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b52e4-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="b3a42-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b3a42-109">See also</span></span>
 
-- [<span data-ttu-id="b52e4-110">Istruzione While...End While</span><span class="sxs-lookup"><span data-stu-id="b52e4-110">While...End While Statement</span></span>](../../visual-basic/language-reference/statements/while-end-while-statement.md)
+- [<span data-ttu-id="b3a42-110">Istruzione While...End While</span><span class="sxs-lookup"><span data-stu-id="b3a42-110">While...End While Statement</span></span>](../language-reference/statements/while-end-while-statement.md)
