--- a/docs/visual-basic/misc/bc30083.md
+++ b/docs/visual-basic/misc/bc30083.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30083
 ms.assetid: b157b9e3-57fa-4324-a13d-b37bcf0861e6
-ms.openlocfilehash: dc8e63ccaa22e4d181b93d364a388d9847e15da9
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 3afc8b0e7e0685a73036ac4456f7119d5731b62d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64622166"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84380690"
 ---
-# <a name="do-must-end-with-a-matching-loop"></a><span data-ttu-id="630af-102">'Do' deve terminare con un oggetto 'Loop' corrispondente</span><span class="sxs-lookup"><span data-stu-id="630af-102">'Do' must end with a matching 'Loop'</span></span>
-<span data-ttu-id="630af-103">Un'istruzione `Do` si verifica senza un'istruzione `Loop` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="630af-103">A `Do` statement occurs without a corresponding `Loop` statement.</span></span> <span data-ttu-id="630af-104">Deve essere usata un'istruzione `Loop` per terminare il ciclo `Do` .</span><span class="sxs-lookup"><span data-stu-id="630af-104">A `Loop` statement must be used to end the `Do` loop.</span></span>  
+# <a name="do-must-end-with-a-matching-loop"></a><span data-ttu-id="74eb0-102">'Do' deve terminare con un oggetto 'Loop' corrispondente</span><span class="sxs-lookup"><span data-stu-id="74eb0-102">'Do' must end with a matching 'Loop'</span></span>
+<span data-ttu-id="74eb0-103">Un'istruzione `Do` si verifica senza un'istruzione `Loop` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="74eb0-103">A `Do` statement occurs without a corresponding `Loop` statement.</span></span> <span data-ttu-id="74eb0-104">Deve essere usata un'istruzione `Loop` per terminare il ciclo `Do` .</span><span class="sxs-lookup"><span data-stu-id="74eb0-104">A `Loop` statement must be used to end the `Do` loop.</span></span>  
   
- <span data-ttu-id="630af-105">**ID errore:** BC30083</span><span class="sxs-lookup"><span data-stu-id="630af-105">**Error ID:** BC30083</span></span>  
+ <span data-ttu-id="74eb0-105">**ID errore:** BC30083</span><span class="sxs-lookup"><span data-stu-id="74eb0-105">**Error ID:** BC30083</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="630af-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="630af-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="74eb0-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="74eb0-106">To correct this error</span></span>  
   
-- <span data-ttu-id="630af-107">Se questo ciclo `Do` fa parte di un set di cicli annidati, verificare che ogni ciclo venga terminato correttamente.</span><span class="sxs-lookup"><span data-stu-id="630af-107">If this `Do` loop is part of a set of nested loops, make sure each loop is properly terminated.</span></span>  
+- <span data-ttu-id="74eb0-107">Se questo ciclo `Do` fa parte di un set di cicli annidati, verificare che ogni ciclo venga terminato correttamente.</span><span class="sxs-lookup"><span data-stu-id="74eb0-107">If this `Do` loop is part of a set of nested loops, make sure each loop is properly terminated.</span></span>  
   
-- <span data-ttu-id="630af-108">Aggiungere un'istruzione `Loop` alla fine del ciclo `Do` .</span><span class="sxs-lookup"><span data-stu-id="630af-108">Add a `Loop` statement to the end of the `Do` loop.</span></span>  
+- <span data-ttu-id="74eb0-108">Aggiungere un'istruzione `Loop` alla fine del ciclo `Do` .</span><span class="sxs-lookup"><span data-stu-id="74eb0-108">Add a `Loop` statement to the end of the `Do` loop.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="630af-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="630af-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="74eb0-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="74eb0-109">See also</span></span>
 
-- [<span data-ttu-id="630af-110">Istruzione Do...Loop</span><span class="sxs-lookup"><span data-stu-id="630af-110">Do...Loop Statement</span></span>](../../visual-basic/language-reference/statements/do-loop-statement.md)
+- [<span data-ttu-id="74eb0-110">Istruzione Do...Loop</span><span class="sxs-lookup"><span data-stu-id="74eb0-110">Do...Loop Statement</span></span>](../language-reference/statements/do-loop-statement.md)
