--- a/docs/visual-basic/misc/bc30098.md
+++ b/docs/visual-basic/misc/bc30098.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30098
 ms.assetid: d0c6cdac-a49d-49d2-ba92-ddf01eed0620
-ms.openlocfilehash: 7039f5f129371877472b07c299bd7ad11508f77f
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: f433f80967dc58ad6139c26adf6f7af42c761c7c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64622153"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366307"
 ---
-# <a name="readonly-property-propertyname-cannot-be-the-target-of-an-assignment"></a><span data-ttu-id="cb227-102">La proprietà 'ReadOnly' '\<NomeProprietà >' non può essere la destinazione di un'assegnazione</span><span class="sxs-lookup"><span data-stu-id="cb227-102">'ReadOnly' property '\<propertyname>' cannot be the target of an assignment</span></span>
-<span data-ttu-id="cb227-103">Una proprietà `ReadOnly` si trova in un contesto che le assegna un valore.</span><span class="sxs-lookup"><span data-stu-id="cb227-103">A `ReadOnly` property occurs in a context that assigns a value to it.</span></span> <span data-ttu-id="cb227-104">Solo alle variabili, alle proprietà e agli elementi di matrice scrivibili è possibile assegnare valori durante l'esecuzione.</span><span class="sxs-lookup"><span data-stu-id="cb227-104">Only writable variables, properties, and array elements can have values assigned to them during execution.</span></span>  
+# <a name="readonly-property-propertyname-cannot-be-the-target-of-an-assignment"></a><span data-ttu-id="c68d6-102">La proprietà 'ReadOnly' '\<propertyname>' non può essere la destinazione di un'assegnazione</span><span class="sxs-lookup"><span data-stu-id="c68d6-102">'ReadOnly' property '\<propertyname>' cannot be the target of an assignment</span></span>
+<span data-ttu-id="c68d6-103">Una proprietà `ReadOnly` si trova in un contesto che le assegna un valore.</span><span class="sxs-lookup"><span data-stu-id="c68d6-103">A `ReadOnly` property occurs in a context that assigns a value to it.</span></span> <span data-ttu-id="c68d6-104">Solo alle variabili, alle proprietà e agli elementi di matrice scrivibili è possibile assegnare valori durante l'esecuzione.</span><span class="sxs-lookup"><span data-stu-id="c68d6-104">Only writable variables, properties, and array elements can have values assigned to them during execution.</span></span>  
   
- <span data-ttu-id="cb227-105">**ID errore:** BC30098</span><span class="sxs-lookup"><span data-stu-id="cb227-105">**Error ID:** BC30098</span></span>  
+ <span data-ttu-id="c68d6-105">**ID errore:** BC30098</span><span class="sxs-lookup"><span data-stu-id="c68d6-105">**Error ID:** BC30098</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="cb227-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="cb227-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="c68d6-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c68d6-106">To correct this error</span></span>  
   
-- <span data-ttu-id="cb227-107">Rimuovere la parola chiave `ReadOnly` dall'istruzione `Property` che dichiara la variabile oppure rimuovere l'istruzione che le assegna un valore.</span><span class="sxs-lookup"><span data-stu-id="cb227-107">Remove the `ReadOnly` keyword from the `Property` statement declaring the variable, or remove the statement that assigns a value to it.</span></span>  
+- <span data-ttu-id="c68d6-107">Rimuovere la parola chiave `ReadOnly` dall'istruzione `Property` che dichiara la variabile oppure rimuovere l'istruzione che le assegna un valore.</span><span class="sxs-lookup"><span data-stu-id="c68d6-107">Remove the `ReadOnly` keyword from the `Property` statement declaring the variable, or remove the statement that assigns a value to it.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="cb227-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="cb227-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="c68d6-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c68d6-108">See also</span></span>
 
-- [<span data-ttu-id="cb227-109">ReadOnly</span><span class="sxs-lookup"><span data-stu-id="cb227-109">ReadOnly</span></span>](../../visual-basic/language-reference/modifiers/readonly.md)
-- [<span data-ttu-id="cb227-110">Istruzione Property</span><span class="sxs-lookup"><span data-stu-id="cb227-110">Property Statement</span></span>](../../visual-basic/language-reference/statements/property-statement.md)
+- [<span data-ttu-id="c68d6-109">ReadOnly</span><span class="sxs-lookup"><span data-stu-id="c68d6-109">ReadOnly</span></span>](../language-reference/modifiers/readonly.md)
+- [<span data-ttu-id="c68d6-110">Property Statement</span><span class="sxs-lookup"><span data-stu-id="c68d6-110">Property Statement</span></span>](../language-reference/statements/property-statement.md)
