--- a/docs/visual-basic/misc/bc30443.md
+++ b/docs/visual-basic/misc/bc30443.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30443
 ms.assetid: 6a68e7f7-3006-4c7f-ad53-d1fcfb105e10
-ms.openlocfilehash: ccd23c241ef0f1290842355cb1f6ed2610a09a1c
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 7735a1534961aa2327817ae8357f1ddf2c38fb88
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64589464"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84361658"
 ---
-# <a name="get-is-already-declared"></a><span data-ttu-id="ac6ff-102">'Get' è già dichiarato</span><span class="sxs-lookup"><span data-stu-id="ac6ff-102">'Get' is already declared</span></span>
-<span data-ttu-id="ac6ff-103">Un'istruzione `Get` appare più volte in un blocco di codice.</span><span class="sxs-lookup"><span data-stu-id="ac6ff-103">A `Get` statement appears more than once in a code block.</span></span> <span data-ttu-id="ac6ff-104">L'istruzione `Get` dichiara una routine della proprietà `Get` usata per recuperare un valore da una proprietà.</span><span class="sxs-lookup"><span data-stu-id="ac6ff-104">The `Get` statement declares a `Get` property procedure used to retrieve a value of a property.</span></span>  
+# <a name="get-is-already-declared"></a><span data-ttu-id="97c3f-102">'Get' è già dichiarato</span><span class="sxs-lookup"><span data-stu-id="97c3f-102">'Get' is already declared</span></span>
+<span data-ttu-id="97c3f-103">Un'istruzione `Get` appare più volte in un blocco di codice.</span><span class="sxs-lookup"><span data-stu-id="97c3f-103">A `Get` statement appears more than once in a code block.</span></span> <span data-ttu-id="97c3f-104">L'istruzione `Get` dichiara una routine della proprietà `Get` usata per recuperare un valore da una proprietà.</span><span class="sxs-lookup"><span data-stu-id="97c3f-104">The `Get` statement declares a `Get` property procedure used to retrieve a value of a property.</span></span>  
   
- <span data-ttu-id="ac6ff-105">**ID errore:** BC30443</span><span class="sxs-lookup"><span data-stu-id="ac6ff-105">**Error ID:** BC30443</span></span>  
+ <span data-ttu-id="97c3f-105">**ID errore:** BC30443</span><span class="sxs-lookup"><span data-stu-id="97c3f-105">**Error ID:** BC30443</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="ac6ff-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ac6ff-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="97c3f-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="97c3f-106">To correct this error</span></span>  
   
-- <span data-ttu-id="ac6ff-107">Rimuovere l'istruzione `Get` ridondante.</span><span class="sxs-lookup"><span data-stu-id="ac6ff-107">Remove the redundant `Get` statement.</span></span>  
+- <span data-ttu-id="97c3f-107">Rimuovere l'istruzione `Get` ridondante.</span><span class="sxs-lookup"><span data-stu-id="97c3f-107">Remove the redundant `Get` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="ac6ff-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ac6ff-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="97c3f-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="97c3f-108">See also</span></span>
 
-- [<span data-ttu-id="ac6ff-109">Istruzione Get</span><span class="sxs-lookup"><span data-stu-id="ac6ff-109">Get Statement</span></span>](../../visual-basic/language-reference/statements/get-statement.md)
+- [<span data-ttu-id="97c3f-109">Istruzione Get</span><span class="sxs-lookup"><span data-stu-id="97c3f-109">Get Statement</span></span>](../language-reference/statements/get-statement.md)
