--- a/docs/visual-basic/misc/bc31049.md
+++ b/docs/visual-basic/misc/bc31049.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC31049
 ms.assetid: 8356978e-7f84-4932-be0f-dda005c9f8ca
-ms.openlocfilehash: 3a2b897776cb0ebc27611be6a1e2c1704a053c9d
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: 683686a1407680102ee94562bf4fdd3bc4999e5e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71351596"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366138"
 ---
-# <a name="initializers-on-structure-members-are-valid-only-for-shared-members-and-constants"></a><span data-ttu-id="c1562-102">Gli inizializzatori dei membri di struttura sono validi solo per costanti e membri 'Shared'</span><span class="sxs-lookup"><span data-stu-id="c1562-102">Initializers on structure members are valid only for 'Shared' members and constants</span></span>
-<span data-ttu-id="c1562-103">Una variabile membro di struttura è stata inizializzata come parte della relativa dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="c1562-103">A structure member variable was initialized as part of its declaration.</span></span>  
+# <a name="initializers-on-structure-members-are-valid-only-for-shared-members-and-constants"></a><span data-ttu-id="e7348-102">Gli inizializzatori dei membri di struttura sono validi solo per costanti e membri 'Shared'</span><span class="sxs-lookup"><span data-stu-id="e7348-102">Initializers on structure members are valid only for 'Shared' members and constants</span></span>
+<span data-ttu-id="e7348-103">Una variabile membro di struttura è stata inizializzata come parte della relativa dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="e7348-103">A structure member variable was initialized as part of its declaration.</span></span>  
   
- <span data-ttu-id="c1562-104">**ID errore:** BC31049</span><span class="sxs-lookup"><span data-stu-id="c1562-104">**Error ID:** BC31049</span></span>  
+ <span data-ttu-id="e7348-104">**ID errore:** BC31049</span><span class="sxs-lookup"><span data-stu-id="e7348-104">**Error ID:** BC31049</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="c1562-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c1562-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="e7348-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e7348-105">To correct this error</span></span>  
   
-- <span data-ttu-id="c1562-106">Usare una costante anziché una variabile.</span><span class="sxs-lookup"><span data-stu-id="c1562-106">Use a constant instead of a variable.</span></span>  
+- <span data-ttu-id="e7348-106">Usare una costante anziché una variabile.</span><span class="sxs-lookup"><span data-stu-id="e7348-106">Use a constant instead of a variable.</span></span>  
   
-- <span data-ttu-id="c1562-107">Aggiungere un costruttore con parametri alla struttura.</span><span class="sxs-lookup"><span data-stu-id="c1562-107">Add a parameterized constructor to the structure.</span></span> <span data-ttu-id="c1562-108">Esempio:</span><span class="sxs-lookup"><span data-stu-id="c1562-108">For example:</span></span>  
+- <span data-ttu-id="e7348-107">Aggiungere un costruttore con parametri alla struttura.</span><span class="sxs-lookup"><span data-stu-id="e7348-107">Add a parameterized constructor to the structure.</span></span> <span data-ttu-id="e7348-108">Ad esempio:</span><span class="sxs-lookup"><span data-stu-id="e7348-108">For example:</span></span>  
   
     ```vb  
     Structure TestStruct  
@@ -34,7 +34,7 @@ ms.locfileid: "71351596"
     End Structure  
     ```  
   
-## <a name="see-also"></a><span data-ttu-id="c1562-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c1562-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="e7348-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e7348-109">See also</span></span>
 
-- [<span data-ttu-id="c1562-110">Procedura: Dichiarare una struttura</span><span class="sxs-lookup"><span data-stu-id="c1562-110">How to: Declare a Structure</span></span>](../../visual-basic/programming-guide/language-features/data-types/how-to-declare-a-structure.md)
-- [<span data-ttu-id="c1562-111">Costanti ed enumerazioni</span><span class="sxs-lookup"><span data-stu-id="c1562-111">Constants and Enumerations</span></span>](../../visual-basic/programming-guide/language-features/constants-enums/index.md)
+- [<span data-ttu-id="e7348-110">Procedura: Dichiarare una struttura</span><span class="sxs-lookup"><span data-stu-id="e7348-110">How to: Declare a Structure</span></span>](../programming-guide/language-features/data-types/how-to-declare-a-structure.md)
+- [<span data-ttu-id="e7348-111">Costanti ed enumerazioni</span><span class="sxs-lookup"><span data-stu-id="e7348-111">Constants and Enumerations</span></span>](../programming-guide/language-features/constants-enums/index.md)
