--- a/docs/visual-basic/misc/bc31131.md
+++ b/docs/visual-basic/misc/bc31131.md
@@ -1,5 +1,5 @@
 ---
-title: Definizione di 'RemoveHandler' mancante per l'evento '<eventname>'
+title: Manca la definizione di ' RemoveHandler ' per l'evento ' <eventname> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc31131
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC31131
 ms.assetid: 0ef68daf-b66e-4ecf-bf2c-dcacabd8aa3d
-ms.openlocfilehash: ed87c94d323f9320ab90da7e0a3897b806d3de70
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: e96bf448946139f03bf87692ada6f6082368889b
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61915542"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366047"
 ---
-# <a name="removehandler-definition-missing-for-event-eventname"></a><span data-ttu-id="a1136-102">Definizione di 'RemoveHandler' mancante per l'evento '\<NomeEvento >'</span><span class="sxs-lookup"><span data-stu-id="a1136-102">'RemoveHandler' definition missing for event '\<eventname>'</span></span>
-<span data-ttu-id="a1136-103">Se un evento viene dichiarato come `Custom`, deve fornire una routine per la rimozione di un gestore eventi.</span><span class="sxs-lookup"><span data-stu-id="a1136-103">If an event is declared as `Custom`, it must supply a procedure for removing an event handler.</span></span>  
+# <a name="removehandler-definition-missing-for-event-eventname"></a><span data-ttu-id="41fec-102">Manca la definizione di ' RemoveHandler ' per l'evento ' \<eventname> '</span><span class="sxs-lookup"><span data-stu-id="41fec-102">'RemoveHandler' definition missing for event '\<eventname>'</span></span>
+<span data-ttu-id="41fec-103">Se un evento viene dichiarato come `Custom`, deve fornire una routine per la rimozione di un gestore eventi.</span><span class="sxs-lookup"><span data-stu-id="41fec-103">If an event is declared as `Custom`, it must supply a procedure for removing an event handler.</span></span>  
   
- <span data-ttu-id="a1136-104">**ID errore:** BC31131</span><span class="sxs-lookup"><span data-stu-id="a1136-104">**Error ID:** BC31131</span></span>  
+ <span data-ttu-id="41fec-104">**ID errore:** BC31131</span><span class="sxs-lookup"><span data-stu-id="41fec-104">**Error ID:** BC31131</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="a1136-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a1136-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="41fec-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="41fec-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="a1136-106">Includere una dichiarazione `RemoveHandler` tra l'istruzione `Custom Event` e l'istruzione `End Event` .</span><span class="sxs-lookup"><span data-stu-id="a1136-106">Include a `RemoveHandler` declaration between the `Custom Event` statement and the `End Event` statement.</span></span>  
+1. <span data-ttu-id="41fec-106">Includere una dichiarazione `RemoveHandler` tra l'istruzione `Custom Event` e l'istruzione `End Event` .</span><span class="sxs-lookup"><span data-stu-id="41fec-106">Include a `RemoveHandler` declaration between the `Custom Event` statement and the `End Event` statement.</span></span>  
   
-2. <span data-ttu-id="a1136-107">Verificare che le altre routine all'interno della dichiarazione di evento vengano terminate correttamente.</span><span class="sxs-lookup"><span data-stu-id="a1136-107">Verify that other procedures within the event declaration are correctly terminated.</span></span>  
+2. <span data-ttu-id="41fec-107">Verificare che le altre routine all'interno della dichiarazione di evento vengano terminate correttamente.</span><span class="sxs-lookup"><span data-stu-id="41fec-107">Verify that other procedures within the event declaration are correctly terminated.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="a1136-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a1136-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="41fec-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="41fec-108">See also</span></span>
 
-- [<span data-ttu-id="a1136-109">Istruzione RemoveHandler</span><span class="sxs-lookup"><span data-stu-id="a1136-109">RemoveHandler Statement</span></span>](../../visual-basic/language-reference/statements/removehandler-statement.md)
-- [<span data-ttu-id="a1136-110">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="a1136-110">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)
+- [<span data-ttu-id="41fec-109">Istruzione RemoveHandler</span><span class="sxs-lookup"><span data-stu-id="41fec-109">RemoveHandler Statement</span></span>](../language-reference/statements/removehandler-statement.md)
+- [<span data-ttu-id="41fec-110">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="41fec-110">Event Statement</span></span>](../language-reference/statements/event-statement.md)
