--- a/docs/visual-basic/misc/bc32023.md
+++ b/docs/visual-basic/misc/bc32023.md
@@ -1,5 +1,5 @@
 ---
-title: Espressione è di tipo '<typename>', che non è un tipo di raccolta
+title: L'espressione è di tipo '<typename>', che non è un tipo raccolta
 ms.date: 07/20/2015
 f1_keywords:
 - bc32023
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC32023
 ms.assetid: d0f151be-6b65-498b-b571-03faf24df0d8
-ms.openlocfilehash: 284268f601b9c0083ca4bf73da02a1a29723a7d8
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: e5cfe32bb151740c9d47cd65afba6bbe0a9d68b1
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64603363"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84365787"
 ---
-# <a name="expression-is-of-type-typename-which-is-not-a-collection-type"></a><span data-ttu-id="2e031-102">Espressione è di tipo '\<nomeTipo >', che non è un tipo di raccolta</span><span class="sxs-lookup"><span data-stu-id="2e031-102">Expression is of type '\<typename>', which is not a collection type</span></span>
-<span data-ttu-id="2e031-103">La variabile di gruppo specificata in un'istruzione `For Each` non è un oggetto raccolta o una matrice e il relativo tipo non implementa l'interfaccia <xref:System.Collections.IEnumerable> .</span><span class="sxs-lookup"><span data-stu-id="2e031-103">The group variable specified in a `For Each` statement is not a collection object or an array, and its type does not implement the <xref:System.Collections.IEnumerable> interface.</span></span> <span data-ttu-id="2e031-104">Il tipo deve supportare il pattern di progettazione raccolta di Visual Basic o implementare <xref:System.Collections.IEnumerable>.</span><span class="sxs-lookup"><span data-stu-id="2e031-104">The type must either support the Visual Basic collection design pattern or implement <xref:System.Collections.IEnumerable>.</span></span>  
+# <a name="expression-is-of-type-typename-which-is-not-a-collection-type"></a><span data-ttu-id="331c8-102">L'espressione è di tipo '\<typename>', che non è un tipo raccolta</span><span class="sxs-lookup"><span data-stu-id="331c8-102">Expression is of type '\<typename>', which is not a collection type</span></span>
+<span data-ttu-id="331c8-103">La variabile di gruppo specificata in un'istruzione `For Each` non è un oggetto raccolta o una matrice e il relativo tipo non implementa l'interfaccia <xref:System.Collections.IEnumerable> .</span><span class="sxs-lookup"><span data-stu-id="331c8-103">The group variable specified in a `For Each` statement is not a collection object or an array, and its type does not implement the <xref:System.Collections.IEnumerable> interface.</span></span> <span data-ttu-id="331c8-104">Il tipo deve supportare lo schema di progettazione della raccolta Visual Basic o implementare <xref:System.Collections.IEnumerable> .</span><span class="sxs-lookup"><span data-stu-id="331c8-104">The type must either support the Visual Basic collection design pattern or implement <xref:System.Collections.IEnumerable>.</span></span>  
   
- <span data-ttu-id="2e031-105">**ID errore:** BC32023</span><span class="sxs-lookup"><span data-stu-id="2e031-105">**Error ID:** BC32023</span></span>  
+ <span data-ttu-id="331c8-105">**ID errore:** BC32023</span><span class="sxs-lookup"><span data-stu-id="331c8-105">**Error ID:** BC32023</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="2e031-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2e031-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="331c8-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="331c8-106">To correct this error</span></span>  
   
-- <span data-ttu-id="2e031-107">Dichiarare la variabile di gruppo sia di un tipo di classe che supporta la progettazione di raccolta di Visual Basic o implementa <xref:System.Collections.IEnumerable>.</span><span class="sxs-lookup"><span data-stu-id="2e031-107">Declare the group variable to be of a class type that either supports the Visual Basic collection design or implements <xref:System.Collections.IEnumerable>.</span></span>  
+- <span data-ttu-id="331c8-107">Dichiarare la variabile di gruppo in modo che sia di un tipo di classe che supporta la progettazione della raccolta Visual Basic o implementa <xref:System.Collections.IEnumerable> .</span><span class="sxs-lookup"><span data-stu-id="331c8-107">Declare the group variable to be of a class type that either supports the Visual Basic collection design or implements <xref:System.Collections.IEnumerable>.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="2e031-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2e031-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="331c8-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="331c8-108">See also</span></span>
 
 - <xref:System.Collections.IEnumerable>
-- [<span data-ttu-id="2e031-109">Istruzione For Each...Next</span><span class="sxs-lookup"><span data-stu-id="2e031-109">For Each...Next Statement</span></span>](../../visual-basic/language-reference/statements/for-each-next-statement.md)
-- [<span data-ttu-id="2e031-110">Classe Collection di Visual Basic</span><span class="sxs-lookup"><span data-stu-id="2e031-110">Visual Basic Collection Class</span></span>](../../visual-basic/programming-guide/concepts/collections.md#visual-basic-collection-class)
+- [<span data-ttu-id="331c8-109">Istruzione For Each...Next</span><span class="sxs-lookup"><span data-stu-id="331c8-109">For Each...Next Statement</span></span>](../language-reference/statements/for-each-next-statement.md)
+- [<span data-ttu-id="331c8-110">Classe Collection di Visual Basic</span><span class="sxs-lookup"><span data-stu-id="331c8-110">Visual Basic Collection Class</span></span>](../programming-guide/concepts/collections.md#visual-basic-collection-class)
