--- a/docs/visual-basic/misc/bc32083.md
+++ b/docs/visual-basic/misc/bc32083.md
@@ -1,5 +1,5 @@
 ---
-title: Argomento di tipo '<typeargumentname>'deve avere un costruttore di istanza pubblico senza parametri per soddisfare il vincolo 'New' per il parametro di tipo'<typeparametername>'
+title: L'argomento di tipo ' <typeargumentname> ' deve avere un costruttore di istanza pubblico senza parametri per soddisfare il vincolo ' New ' per il parametro di tipo ' <typeparametername> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32083
@@ -7,28 +7,28 @@ f1_keywords:
 helpviewer_keywords:
 - BC32083
 ms.assetid: 56bf25f1-375c-4b5d-9969-45eba8b3b66c
-ms.openlocfilehash: dc7f865ac748faaf8b0d3b85c2888fdb70845dee
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 8e0adac9053771e7a9306cf436fe1b59e4eed075
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61943459"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84365397"
 ---
-# <a name="type-argument-typeargumentname-must-have-a-public-parameterless-instance-constructor-to-satisfy-the-new-constraint-for-type-parameter-typeparametername"></a><span data-ttu-id="a9966-102">Argomento di tipo '\<nomeargomentotipo >' deve avere un costruttore di istanza pubblico senza parametri per soddisfare il vincolo 'New' per il parametro di tipo '\<nomeparametrotipo >'</span><span class="sxs-lookup"><span data-stu-id="a9966-102">Type argument '\<typeargumentname>' must have a public parameterless instance constructor to satisfy the 'New' constraint for type parameter '\<typeparametername>'</span></span>
-<span data-ttu-id="a9966-103">Un argomento di tipo fornisce un tipo senza un costruttore senza parametri accessibile a un parametro di tipo con il [operatore New](../../visual-basic/language-reference/operators/new-operator.md) vincolo.</span><span class="sxs-lookup"><span data-stu-id="a9966-103">A type argument supplies a type without an accessible parameterless constructor to a type parameter with the [New Operator](../../visual-basic/language-reference/operators/new-operator.md) constraint.</span></span>  
+# <a name="type-argument-typeargumentname-must-have-a-public-parameterless-instance-constructor-to-satisfy-the-new-constraint-for-type-parameter-typeparametername"></a><span data-ttu-id="589dd-102">L'argomento di tipo ' \<typeargumentname> ' deve avere un costruttore di istanza pubblico senza parametri per soddisfare il vincolo ' New ' per il parametro di tipo ' \<typeparametername> '</span><span class="sxs-lookup"><span data-stu-id="589dd-102">Type argument '\<typeargumentname>' must have a public parameterless instance constructor to satisfy the 'New' constraint for type parameter '\<typeparametername>'</span></span>
+<span data-ttu-id="589dd-103">Un argomento di tipo fornisce un tipo senza un costruttore senza parametri accessibile a un parametro di tipo con il nuovo vincolo di [operatore](../language-reference/operators/new-operator.md) .</span><span class="sxs-lookup"><span data-stu-id="589dd-103">A type argument supplies a type without an accessible parameterless constructor to a type parameter with the [New Operator](../language-reference/operators/new-operator.md) constraint.</span></span>  
   
- <span data-ttu-id="a9966-104">Un elenco di vincoli impone requisiti per l'argomento di tipo passato al parametro di tipo.</span><span class="sxs-lookup"><span data-stu-id="a9966-104">A constraint list imposes requirements on the type argument passed to the type parameter.</span></span> <span data-ttu-id="a9966-105">Uno dei requisiti può essere che l'argomento di tipo deve esporre un costruttore senza parametri a cui il codice di creazione possa accedere.</span><span class="sxs-lookup"><span data-stu-id="a9966-105">One possible requirement is that the type argument must expose a parameterless constructor that the creating code can access.</span></span> <span data-ttu-id="a9966-106">Per specificare questo requisito, l'elenco di vincoli comprende il vincolo `New` .</span><span class="sxs-lookup"><span data-stu-id="a9966-106">To specify this requirement, the constraint list includes the `New` constraint.</span></span>  
+ <span data-ttu-id="589dd-104">Un elenco di vincoli impone requisiti per l'argomento di tipo passato al parametro di tipo.</span><span class="sxs-lookup"><span data-stu-id="589dd-104">A constraint list imposes requirements on the type argument passed to the type parameter.</span></span> <span data-ttu-id="589dd-105">Uno dei requisiti può essere che l'argomento di tipo deve esporre un costruttore senza parametri a cui il codice di creazione possa accedere.</span><span class="sxs-lookup"><span data-stu-id="589dd-105">One possible requirement is that the type argument must expose a parameterless constructor that the creating code can access.</span></span> <span data-ttu-id="589dd-106">Per specificare questo requisito, l'elenco di vincoli comprende il vincolo `New` .</span><span class="sxs-lookup"><span data-stu-id="589dd-106">To specify this requirement, the constraint list includes the `New` constraint.</span></span>  
   
- <span data-ttu-id="a9966-107">**ID errore:** BC32083</span><span class="sxs-lookup"><span data-stu-id="a9966-107">**Error ID:** BC32083</span></span>  
+ <span data-ttu-id="589dd-107">**ID errore:** BC32083</span><span class="sxs-lookup"><span data-stu-id="589dd-107">**Error ID:** BC32083</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="a9966-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a9966-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="589dd-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="589dd-108">To correct this error</span></span>  
   
-1. <span data-ttu-id="a9966-109">Verificare che il nome del tipo generico e il nome del tipo nell'argomento di tipo siano stati digitati correttamente.</span><span class="sxs-lookup"><span data-stu-id="a9966-109">Verify that the generic type name and the type name in the type argument are spelled correctly.</span></span>  
+1. <span data-ttu-id="589dd-109">Verificare che il nome del tipo generico e il nome del tipo nell'argomento di tipo siano stati digitati correttamente.</span><span class="sxs-lookup"><span data-stu-id="589dd-109">Verify that the generic type name and the type name in the type argument are spelled correctly.</span></span>  
   
-2. <span data-ttu-id="a9966-110">Scegliere un tipo per l'argomento di tipo che espone un costruttore senza parametri accessibile.</span><span class="sxs-lookup"><span data-stu-id="a9966-110">Choose a type for the type argument that exposes an accessible parameterless constructor.</span></span> <span data-ttu-id="a9966-111">Questo particolare tipo generico non può essere richiamato a meno che non si possa fornire un tale argomento di tipo a questo parametro di tipo.</span><span class="sxs-lookup"><span data-stu-id="a9966-111">You cannot invoke this particular generic type unless you can supply such a type argument to this type parameter.</span></span>  
+2. <span data-ttu-id="589dd-110">Scegliere un tipo per l'argomento di tipo che espone un costruttore senza parametri accessibile.</span><span class="sxs-lookup"><span data-stu-id="589dd-110">Choose a type for the type argument that exposes an accessible parameterless constructor.</span></span> <span data-ttu-id="589dd-111">Questo particolare tipo generico non può essere richiamato a meno che non si possa fornire un tale argomento di tipo a questo parametro di tipo.</span><span class="sxs-lookup"><span data-stu-id="589dd-111">You cannot invoke this particular generic type unless you can supply such a type argument to this type parameter.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="a9966-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a9966-112">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="589dd-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="589dd-112">See also</span></span>
 
-- [<span data-ttu-id="a9966-113">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="a9966-113">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="a9966-114">Elenco dei tipi</span><span class="sxs-lookup"><span data-stu-id="a9966-114">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
-- [<span data-ttu-id="a9966-115">Procedura: Usare una classe generica</span><span class="sxs-lookup"><span data-stu-id="a9966-115">How to: Use a Generic Class</span></span>](../../visual-basic/programming-guide/language-features/data-types/how-to-use-a-generic-class.md)
+- [<span data-ttu-id="589dd-113">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="589dd-113">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="589dd-114">Type List</span><span class="sxs-lookup"><span data-stu-id="589dd-114">Type List</span></span>](../language-reference/statements/type-list.md)
+- [<span data-ttu-id="589dd-115">Procedura: Usare una classe generica</span><span class="sxs-lookup"><span data-stu-id="589dd-115">How to: Use a Generic Class</span></span>](../programming-guide/language-features/data-types/how-to-use-a-generic-class.md)
