--- a/docs/visual-basic/misc/bc32100.md
+++ b/docs/visual-basic/misc/bc32100.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC32100
 ms.assetid: 08bbaa3a-8ab0-4a90-a519-731dff83ed08
-ms.openlocfilehash: 7445bc8ef472d0a1032b30061528a7ffb1824813
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: 1cdb10badd59be312ab6e239af9560155241a0a5
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64913408"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84365242"
 ---
-# <a name="as-comma-or--expected"></a><span data-ttu-id="48ba8-102">Previsto 'As', virgola o ')'</span><span class="sxs-lookup"><span data-stu-id="48ba8-102">'As', comma or ')' expected</span></span>
-<span data-ttu-id="48ba8-103">Nel parametro di tipo fornito manca `As`, una virgola (`,`) o la parentesi di chiusura ( `)` ).</span><span class="sxs-lookup"><span data-stu-id="48ba8-103">The type parameter that has been supplied is lacking an `As`, comma (`,`), or closing parenthesis ( `)` ).</span></span>  
+# <a name="as-comma-or--expected"></a><span data-ttu-id="d44fb-102">Previsto 'As', virgola o ')'</span><span class="sxs-lookup"><span data-stu-id="d44fb-102">'As', comma or ')' expected</span></span>
+<span data-ttu-id="d44fb-103">Nel parametro di tipo fornito manca `As`, una virgola (`,`) o la parentesi di chiusura ( `)` ).</span><span class="sxs-lookup"><span data-stu-id="d44fb-103">The type parameter that has been supplied is lacking an `As`, comma (`,`), or closing parenthesis ( `)` ).</span></span>  
   
- <span data-ttu-id="48ba8-104">**ID errore:** BC32100</span><span class="sxs-lookup"><span data-stu-id="48ba8-104">**Error ID:** BC32100</span></span>  
+ <span data-ttu-id="d44fb-104">**ID errore:** BC32100</span><span class="sxs-lookup"><span data-stu-id="d44fb-104">**Error ID:** BC32100</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="48ba8-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="48ba8-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="d44fb-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d44fb-105">To correct this error</span></span>  
   
-- <span data-ttu-id="48ba8-106">Fornire l'oggetto `As`, la virgola o la parentesi di chiusura mancante.</span><span class="sxs-lookup"><span data-stu-id="48ba8-106">Supply the missing `As`, comma, or closing parenthesis.</span></span>  
+- <span data-ttu-id="d44fb-106">Fornire l'oggetto `As`, la virgola o la parentesi di chiusura mancante.</span><span class="sxs-lookup"><span data-stu-id="d44fb-106">Supply the missing `As`, comma, or closing parenthesis.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="48ba8-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="48ba8-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="d44fb-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d44fb-107">See also</span></span>
 
-- [<span data-ttu-id="48ba8-108">Tipi di errore</span><span class="sxs-lookup"><span data-stu-id="48ba8-108">Error Types</span></span>](../../visual-basic/programming-guide/language-features/error-types.md)
-- [<span data-ttu-id="48ba8-109">Risoluzione dei problemi relativi ai tipi di dati</span><span class="sxs-lookup"><span data-stu-id="48ba8-109">Troubleshooting Data Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/troubleshooting-data-types.md)
+- [<span data-ttu-id="d44fb-108">Tipi di errore</span><span class="sxs-lookup"><span data-stu-id="d44fb-108">Error Types</span></span>](../programming-guide/language-features/error-types.md)
+- [<span data-ttu-id="d44fb-109">Risoluzione dei problemi relativi ai tipi di dati</span><span class="sxs-lookup"><span data-stu-id="d44fb-109">Troubleshooting Data Types</span></span>](../programming-guide/language-features/data-types/troubleshooting-data-types.md)
