--- a/docs/visual-basic/misc/bc32101.md
+++ b/docs/visual-basic/misc/bc32101.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC32101
 ms.assetid: fac2330a-e397-4bd9-8166-934407575f9e
-ms.openlocfilehash: cc2404d0f5840d746335f76c8ecba77a30944104
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 9f98d048776f6a5cf8cb0251b77d487ac24026ff
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64618473"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84365293"
 ---
-# <a name="class-constraint-cannot-be-specified-multiple-times-for-the-same-type-parameter"></a><span data-ttu-id="78e74-102">Non è possibile specificare il vincolo 'Class' più volte per lo stesso parametro di tipo</span><span class="sxs-lookup"><span data-stu-id="78e74-102">'Class' constraint cannot be specified multiple times for the same type parameter</span></span>
-<span data-ttu-id="78e74-103">Un elenco di vincoli include il vincolo [Class (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) più volte.</span><span class="sxs-lookup"><span data-stu-id="78e74-103">A constraint list includes the [Class (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) constraint more than once.</span></span>  
+# <a name="class-constraint-cannot-be-specified-multiple-times-for-the-same-type-parameter"></a><span data-ttu-id="e5b4c-102">Non è possibile specificare il vincolo 'Class' più volte per lo stesso parametro di tipo</span><span class="sxs-lookup"><span data-stu-id="e5b4c-102">'Class' constraint cannot be specified multiple times for the same type parameter</span></span>
+<span data-ttu-id="e5b4c-103">Un elenco di vincoli include il vincolo [Class (Visual Basic)](../language-reference/statements/class-statement.md) più volte.</span><span class="sxs-lookup"><span data-stu-id="e5b4c-103">A constraint list includes the [Class (Visual Basic)](../language-reference/statements/class-statement.md) constraint more than once.</span></span>  
   
- <span data-ttu-id="78e74-104">Un elenco di vincoli in un parametro di tipo può specificare che l'argomento di tipo passato a tale parametro di tipo deve essere un tipo valore (con il vincolo [Structure (Visual Basic)](../../visual-basic/language-reference/statements/structure-statement.md) ) o un tipo riferimento (con il vincolo `Class` ).</span><span class="sxs-lookup"><span data-stu-id="78e74-104">A constraint list on a type parameter can specify that the type argument passed to that type parameter must be a value type (with the [Structure (Visual Basic)](../../visual-basic/language-reference/statements/structure-statement.md) constraint) or must be a reference type (with the `Class` constraint).</span></span> <span data-ttu-id="78e74-105">Non è possibile specificare entrambi i vincoli per lo stesso parametro di tipo e non è possibile specificare uno dei due vincoli più volte.</span><span class="sxs-lookup"><span data-stu-id="78e74-105">You cannot specify both constraints on the same type parameter, and you cannot specify either one more than once.</span></span>  
+ <span data-ttu-id="e5b4c-104">Un elenco di vincoli in un parametro di tipo può specificare che l'argomento di tipo passato a tale parametro di tipo deve essere un tipo valore (con il vincolo [Structure (Visual Basic)](../language-reference/statements/structure-statement.md) ) o un tipo riferimento (con il vincolo `Class` ).</span><span class="sxs-lookup"><span data-stu-id="e5b4c-104">A constraint list on a type parameter can specify that the type argument passed to that type parameter must be a value type (with the [Structure (Visual Basic)](../language-reference/statements/structure-statement.md) constraint) or must be a reference type (with the `Class` constraint).</span></span> <span data-ttu-id="e5b4c-105">Non è possibile specificare entrambi i vincoli per lo stesso parametro di tipo e non è possibile specificare uno dei due vincoli più volte.</span><span class="sxs-lookup"><span data-stu-id="e5b4c-105">You cannot specify both constraints on the same type parameter, and you cannot specify either one more than once.</span></span>  
   
- <span data-ttu-id="78e74-106">ID errore: BC32101</span><span class="sxs-lookup"><span data-stu-id="78e74-106">Error ID: BC32101</span></span>  
+ <span data-ttu-id="e5b4c-106">ID errore: BC32101</span><span class="sxs-lookup"><span data-stu-id="e5b4c-106">Error ID: BC32101</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="78e74-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="78e74-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="e5b4c-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e5b4c-107">To correct this error</span></span>  
   
-- <span data-ttu-id="78e74-108">Rimuovere qualsiasi parola chiave `Class` ridondante.</span><span class="sxs-lookup"><span data-stu-id="78e74-108">Remove any redundant `Class` keywords.</span></span> <span data-ttu-id="78e74-109">L'elenco di vincoli deve contenerne solo una.</span><span class="sxs-lookup"><span data-stu-id="78e74-109">You should have only one in the constraint list.</span></span>  
+- <span data-ttu-id="e5b4c-108">Rimuovere qualsiasi parola chiave `Class` ridondante.</span><span class="sxs-lookup"><span data-stu-id="e5b4c-108">Remove any redundant `Class` keywords.</span></span> <span data-ttu-id="e5b4c-109">L'elenco di vincoli deve contenerne solo una.</span><span class="sxs-lookup"><span data-stu-id="e5b4c-109">You should have only one in the constraint list.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="78e74-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="78e74-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="e5b4c-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e5b4c-110">See also</span></span>
 
-- [<span data-ttu-id="78e74-111">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="78e74-111">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="78e74-112">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="78e74-112">Value Types and Reference Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
+- [<span data-ttu-id="e5b4c-111">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="e5b4c-111">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="e5b4c-112">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="e5b4c-112">Value Types and Reference Types</span></span>](../programming-guide/language-features/data-types/value-types-and-reference-types.md)
