--- a/docs/visual-basic/misc/bc33100.md
+++ b/docs/visual-basic/misc/bc33100.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC33100
 ms.assetid: 82c5d886-18a9-47b2-877a-ef7f127edff4
-ms.openlocfilehash: 283c56ef04f69ef259367cf4a67bd28f470b3db9
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 1cfdfe75142a882226cc397b736c4e231f3f9764
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61761826"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84361463"
 ---
-# <a name="nullable-modifier-cannot-be-specified-on-both-a-variable-and-its-type"></a><span data-ttu-id="f9bd1-102">Non è possibile specificare il modificatore nullable sia nella variabile che nel tipo</span><span class="sxs-lookup"><span data-stu-id="f9bd1-102">Nullable modifier cannot be specified on both a variable and its type</span></span>
-<span data-ttu-id="f9bd1-103">Il modificatore di tipo nullable (?) è stato incluso sia per una variabile dichiarata che per il relativo tipo dichiarato.</span><span class="sxs-lookup"><span data-stu-id="f9bd1-103">The nullable type modifier (?) has been included for both a declared variable and its declared type.</span></span>  
+# <a name="nullable-modifier-cannot-be-specified-on-both-a-variable-and-its-type"></a><span data-ttu-id="933f7-102">Non è possibile specificare il modificatore nullable sia nella variabile che nel tipo</span><span class="sxs-lookup"><span data-stu-id="933f7-102">Nullable modifier cannot be specified on both a variable and its type</span></span>
+<span data-ttu-id="933f7-103">Il modificatore di tipo nullable (?) è stato incluso sia per una variabile dichiarata che per il relativo tipo dichiarato.</span><span class="sxs-lookup"><span data-stu-id="933f7-103">The nullable type modifier (?) has been included for both a declared variable and its declared type.</span></span>  
   
- <span data-ttu-id="f9bd1-104">**ID errore:** BC33100</span><span class="sxs-lookup"><span data-stu-id="f9bd1-104">**Error ID:** BC33100</span></span>  
+ <span data-ttu-id="933f7-104">**ID errore:** BC33100</span><span class="sxs-lookup"><span data-stu-id="933f7-104">**Error ID:** BC33100</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="f9bd1-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f9bd1-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="933f7-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="933f7-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="f9bd1-106">Rimuovere il modificatore di tipo nullable (?) dalla variabile o dal relativo tipo dichiarato.</span><span class="sxs-lookup"><span data-stu-id="f9bd1-106">Remove the nullable type modifier (?) from either the variable or its declared type.</span></span>  
+1. <span data-ttu-id="933f7-106">Rimuovere il modificatore di tipo nullable (?) dalla variabile o dal relativo tipo dichiarato.</span><span class="sxs-lookup"><span data-stu-id="933f7-106">Remove the nullable type modifier (?) from either the variable or its declared type.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="f9bd1-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f9bd1-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="933f7-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="933f7-107">See also</span></span>
 
-- [<span data-ttu-id="f9bd1-108">Tipi di valori nullable</span><span class="sxs-lookup"><span data-stu-id="f9bd1-108">Nullable Value Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/nullable-value-types.md)
+- [<span data-ttu-id="933f7-108">Tipi di valore Nullable</span><span class="sxs-lookup"><span data-stu-id="933f7-108">Nullable Value Types</span></span>](../programming-guide/language-features/data-types/nullable-value-types.md)
