--- a/docs/visual-basic/misc/bc33101.md
+++ b/docs/visual-basic/misc/bc33101.md
@@ -1,5 +1,5 @@
 ---
-title: Tipo '<typeName>' deve essere un tipo valore o un argomento di tipo vincolato a 'Structure ' per poter essere usato con 'Nullable' o il modificatore nullable'?'
+title: Il tipo '<typeName>' deve essere un tipo valore o un argomento di tipo vincolato a 'Structure' per essere usato con 'Nullable' o il modificatore nullable '?'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc33101
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC33101
 ms.assetid: b3e0e4e4-87b8-4a38-a450-15233497acaa
-ms.openlocfilehash: 0622d5b63f5880e69a8c6c5c1b2415d1983af04c
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: 36f370f7b45d2bee3566db39b60826d96a461171
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64913391"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84361307"
 ---
-# <a name="type-typename-must-be-a-value-type-or-a-type-argument-constrained-to-structure-in-order-to-be-used-with-nullable-or-nullable-modifier-"></a><span data-ttu-id="68622-102">Tipo '\<nomeTipo >' deve essere un tipo valore o un argomento di tipo vincolato a 'Structure ' per poter essere usato con 'Nullable' o il modificatore nullable'?'</span><span class="sxs-lookup"><span data-stu-id="68622-102">Type '\<typeName>' must be a value type or a type argument constrained to 'Structure' in order to be used with 'Nullable' or nullable modifier '?'</span></span>
-<span data-ttu-id="68622-103">Solo i tipi valore, incluse le strutture, possono essere dichiarati nullable.</span><span class="sxs-lookup"><span data-stu-id="68622-103">Only value types, including structures, can be declared nullable.</span></span>  
+# <a name="type-typename-must-be-a-value-type-or-a-type-argument-constrained-to-structure-in-order-to-be-used-with-nullable-or-nullable-modifier-"></a><span data-ttu-id="b24ed-102">Il tipo '\<typeName>' deve essere un tipo valore o un argomento di tipo vincolato a 'Structure' per essere usato con 'Nullable' o il modificatore nullable '?'</span><span class="sxs-lookup"><span data-stu-id="b24ed-102">Type '\<typeName>' must be a value type or a type argument constrained to 'Structure' in order to be used with 'Nullable' or nullable modifier '?'</span></span>
+<span data-ttu-id="b24ed-103">Solo i tipi valore, incluse le strutture, possono essere dichiarati nullable.</span><span class="sxs-lookup"><span data-stu-id="b24ed-103">Only value types, including structures, can be declared nullable.</span></span>  
   
 ```vb  
 ' Valid.  
@@ -27,14 +27,14 @@ Dim m As Integer?
 ' Dim q As Nullable(Of Object)  
 ```  
   
- <span data-ttu-id="68622-104">**ID errore:** BC33101</span><span class="sxs-lookup"><span data-stu-id="68622-104">**Error ID:** BC33101</span></span>  
+ <span data-ttu-id="b24ed-104">**ID errore:** BC33101</span><span class="sxs-lookup"><span data-stu-id="b24ed-104">**Error ID:** BC33101</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="68622-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="68622-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b24ed-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b24ed-105">To correct this error</span></span>  
   
-- <span data-ttu-id="68622-106">Rimuovere '?' o `Nullable`.</span><span class="sxs-lookup"><span data-stu-id="68622-106">Remove the '?' or `Nullable`.</span></span>  
+- <span data-ttu-id="b24ed-106">Rimuovere '?' o `Nullable`.</span><span class="sxs-lookup"><span data-stu-id="b24ed-106">Remove the '?' or `Nullable`.</span></span>  
   
-- <span data-ttu-id="68622-107">Usare un tipo di dati valore.</span><span class="sxs-lookup"><span data-stu-id="68622-107">Use a value data type.</span></span>  
+- <span data-ttu-id="b24ed-107">Usare un tipo di dati valore.</span><span class="sxs-lookup"><span data-stu-id="b24ed-107">Use a value data type.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="68622-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="68622-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="b24ed-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b24ed-108">See also</span></span>
 
-- [<span data-ttu-id="68622-109">Tipi di valori nullable</span><span class="sxs-lookup"><span data-stu-id="68622-109">Nullable Value Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/nullable-value-types.md)
+- [<span data-ttu-id="b24ed-109">Tipi di valore Nullable</span><span class="sxs-lookup"><span data-stu-id="b24ed-109">Nullable Value Types</span></span>](../programming-guide/language-features/data-types/nullable-value-types.md)
