--- a/docs/visual-basic/misc/bc33104.md
+++ b/docs/visual-basic/misc/bc33104.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC33104
 ms.assetid: 3218f89b-cdcf-4e61-9a40-475a5d7e469d
-ms.openlocfilehash: 399747368576680e87c308d1f03aaaff12776ce5
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: d15f357a0ca081020540af18f42dde0efdbfb64c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64626569"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84361242"
 ---
-# <a name="if-operator-requires-either-two-or-three-operands"></a><span data-ttu-id="86f87-102">L'operatore 'If' richiede due o tre operandi</span><span class="sxs-lookup"><span data-stu-id="86f87-102">'If' operator requires either two or three operands</span></span>
-<span data-ttu-id="86f87-103">L'operatore `If` accetta solo due o tre argomenti.</span><span class="sxs-lookup"><span data-stu-id="86f87-103">The `If` operator accepts only two or three arguments.</span></span>  
+# <a name="if-operator-requires-either-two-or-three-operands"></a><span data-ttu-id="f31da-102">L'operatore 'If' richiede due o tre operandi</span><span class="sxs-lookup"><span data-stu-id="f31da-102">'If' operator requires either two or three operands</span></span>
+<span data-ttu-id="f31da-103">L'operatore `If` accetta solo due o tre argomenti.</span><span class="sxs-lookup"><span data-stu-id="f31da-103">The `If` operator accepts only two or three arguments.</span></span>  
   
- <span data-ttu-id="86f87-104">**ID errore:** BC33104</span><span class="sxs-lookup"><span data-stu-id="86f87-104">**Error ID:** BC33104</span></span>  
+ <span data-ttu-id="f31da-104">**ID errore:** BC33104</span><span class="sxs-lookup"><span data-stu-id="f31da-104">**Error ID:** BC33104</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="86f87-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="86f87-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f31da-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f31da-105">To correct this error</span></span>  
   
-- <span data-ttu-id="86f87-106">Esaminare l'espressione `If` per vedere se il numero di operatori può essere ridotto o esteso per due o tre argomenti.</span><span class="sxs-lookup"><span data-stu-id="86f87-106">Examine the `If` expression to see whether the number of operators can be reduced or extended to either two or three arguments.</span></span>  
+- <span data-ttu-id="f31da-106">Esaminare l'espressione `If` per vedere se il numero di operatori può essere ridotto o esteso per due o tre argomenti.</span><span class="sxs-lookup"><span data-stu-id="f31da-106">Examine the `If` expression to see whether the number of operators can be reduced or extended to either two or three arguments.</span></span>  
   
-- <span data-ttu-id="86f87-107">Si consiglia di usare un'altra costruzione condizionale, ad esempio un'istruzione `If...Then...Else` o un'istruzione annidata `If...Then...Else` per organizzare gli argomenti.</span><span class="sxs-lookup"><span data-stu-id="86f87-107">Consider using another conditional construction, such as an `If...Then...Else` statement or a nested `If...Then...Else` statement to organize the arguments.</span></span>  
+- <span data-ttu-id="f31da-107">Si consiglia di usare un'altra costruzione condizionale, ad esempio un'istruzione `If...Then...Else` o un'istruzione annidata `If...Then...Else` per organizzare gli argomenti.</span><span class="sxs-lookup"><span data-stu-id="f31da-107">Consider using another conditional construction, such as an `If...Then...Else` statement or a nested `If...Then...Else` statement to organize the arguments.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="86f87-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="86f87-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="f31da-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f31da-108">See also</span></span>
 
-- [<span data-ttu-id="86f87-109">Operatore If</span><span class="sxs-lookup"><span data-stu-id="86f87-109">If Operator</span></span>](../../visual-basic/language-reference/operators/if-operator.md)
-- [<span data-ttu-id="86f87-110">Istruzione If...Then...Else</span><span class="sxs-lookup"><span data-stu-id="86f87-110">If...Then...Else Statement</span></span>](../../visual-basic/language-reference/statements/if-then-else-statement.md)
+- [<span data-ttu-id="f31da-109">Operatore If</span><span class="sxs-lookup"><span data-stu-id="f31da-109">If Operator</span></span>](../language-reference/operators/if-operator.md)
+- [<span data-ttu-id="f31da-110">Istruzione If...Then...Else</span><span class="sxs-lookup"><span data-stu-id="f31da-110">If...Then...Else Statement</span></span>](../language-reference/statements/if-then-else-statement.md)
